test/conformance/chainsaw/generate/policy/standard/clone/nosync/pol-clone-nosync-invalid/policy1.yaml
apiVersion: kyverno.io/v1
kind: Policy
metadata:
  name: pol-clone-nosync-invalid
  namespace: default
spec:
  rules:
  - name: pol-clone-nosync-invalid-rule
    match:
      any:
      - resources:
          kinds:
          - ConfigMap
    generate:
      apiVersion: v1
      kind: Secret
      name: newsecret
      namespace: default
      synchronize: false
      clone:
        name: regcred
        namespace: foo
