test/conformance/chainsaw/generate/policy/standard/clone/nosync/pol-clone-nosync-invalid/01-script-try-create1.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: script-try-create1
spec:
  timeouts: {}
  try:
  - script:
      content: "if kubectl apply -f policy1.yaml\nthen \n  echo \"Tested failed. Policy
        was created when it shouldn't have been.\"\n  exit 1 \nelse \n  echo \"Test
        succeeded. Policy was not created as intended.\"\n  exit 0\nfi\n"
