test/conformance/chainsaw/generate/policy/standard/clone/nosync/pol-clone-nosync-invalid/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: pol-clone-nosync-invalid
spec:
  concurrent: false
  steps:
  - name: step-01
    try:
    - apply:
        file: permissions.yaml
    - script:
        content: "if kubectl apply -f policy1.yaml\nthen \n  echo \"Tested failed.
          Policy was created when it shouldn't have been.\"\n  exit 1 \nelse \n  echo
          \"Test succeeded. Policy was not created as intended.\"\n  exit 0\nfi\n"
  - name: step-02
    try:
    - script:
        content: "if kubectl apply -f policy2.yaml\nthen \n  echo \"Tested failed.
          Policy was created when it shouldn't have been.\"\n  exit 1 \nelse \n  echo
          \"Test succeeded. Policy was not created as intended.\"\n  exit 0\nfi\n"
